--- a/The Math/JournalEntryView.xib
+++ b/The Math/JournalEntryView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -19,7 +19,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="12F-GG-nX9">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                     <subviews>
-                                        <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="OK1-x9-l8Z">
+                                        <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OK1-x9-l8Z">
                                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                         </mapView>
                                     </subviews>
@@ -98,7 +98,7 @@
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AFFECTING YOUR MOOD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pzR-dE-bri">
                                                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -218,13 +218,13 @@
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DETAILS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFJ-8S-ca4" userLabel="Details Label" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="NOTE" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O6C-5J-wCD">
                                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -303,7 +303,7 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstItem="12F-GG-nX9" firstAttribute="top" secondItem="SDV-Zh-V5M" secondAttribute="bottom" id="DsZ-co-muS">
-                                    <variation key="heightClass=compact" constant="20"/>
+                                    <variation key="heightClass=compact" constant="6"/>
                                 </constraint>
                                 <constraint firstItem="12F-GG-nX9" firstAttribute="leading" secondItem="2Zn-7x-b4A" secondAttribute="leading" id="K0B-fE-JdT">
                                     <variation key="heightClass=compact" constant="30"/>
@@ -355,7 +355,9 @@
                         <constraint firstItem="2Zn-7x-b4A" firstAttribute="leading" secondItem="reI-jc-7FP" secondAttribute="leading" id="2Qh-Rw-mRf"/>
                         <constraint firstItem="2Zn-7x-b4A" firstAttribute="top" secondItem="reI-jc-7FP" secondAttribute="top" id="Psg-cM-osX"/>
                         <constraint firstAttribute="trailing" secondItem="2Zn-7x-b4A" secondAttribute="trailing" id="oL9-yT-QfP"/>
-                        <constraint firstAttribute="bottom" secondItem="2Zn-7x-b4A" secondAttribute="bottom" id="vPB-1q-Fpf"/>
+                        <constraint firstAttribute="bottom" secondItem="2Zn-7x-b4A" secondAttribute="bottom" id="vPB-1q-Fpf">
+                            <variation key="heightClass=compact" constant="106"/>
+                        </constraint>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
