--- a/The Math/OnboardingLocationView.xib
+++ b/The Math/OnboardingLocationView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -28,12 +28,16 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iXW-gD-Bjp">
                                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="280" id="8Ef-Kv-3RG"/>
-                                        <constraint firstAttribute="width" constant="280" id="yX7-mJ-Mnr"/>
+                                        <constraint firstAttribute="width" constant="280" id="8Ef-Kv-3RG">
+                                            <variation key="heightClass=regular-widthClass=compact" constant="310"/>
+                                        </constraint>
+                                        <constraint firstAttribute="width" constant="280" id="yX7-mJ-Mnr">
+                                            <variation key="heightClass=regular-widthClass=compact" constant="310"/>
+                                        </constraint>
                                     </constraints>
                                     <string key="text">Allow access to your location when saving a mood so How Am I Doing can record which neighborhood you were in and what the weather was like.</string>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="textColor" white="1" alpha="0.75" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                     <variation key="default">
                                         <mask key="constraints">
@@ -53,7 +57,7 @@
                             <constraints>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ToB-kt-znT" secondAttribute="trailing" constant="8" id="6wy-Ge-qhF"/>
                                 <constraint firstItem="iXW-gD-Bjp" firstAttribute="top" secondItem="ToB-kt-znT" secondAttribute="bottom" constant="8" id="FN9-s0-Xte">
-                                    <variation key="heightClass=regular-widthClass=compact" constant="11"/>
+                                    <variation key="heightClass=regular-widthClass=compact" constant="8"/>
                                 </constraint>
                                 <constraint firstAttribute="bottom" secondItem="iXW-gD-Bjp" secondAttribute="bottom" id="Fnj-yY-1uP">
                                     <variation key="heightClass=regular-widthClass=compact" constant="10"/>
@@ -108,15 +112,15 @@
                                     <include reference="fcR-Kx-Jeq"/>
                                     <include reference="u9N-af-pRZ"/>
                                     <include reference="FN9-s0-Xte"/>
-                                    <include reference="Fnj-yY-1uP"/>
+                                    <exclude reference="Fnj-yY-1uP"/>
                                     <include reference="eEz-0W-10Y"/>
-                                    <include reference="sA4-LG-ant"/>
+                                    <exclude reference="sA4-LG-ant"/>
                                     <include reference="wKn-De-MT3"/>
                                 </mask>
                             </variation>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" red="0.1333333333" green="0.73333333329999995" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" red="0.95164865255355835" green="0.63161641359329224" blue="0.98722249269485474" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="centerY" secondItem="9iG-9i-A84" secondAttribute="centerY" id="1bY-Ee-aPb"/>
                         <constraint firstItem="9iG-9i-A84" firstAttribute="leading" secondItem="79n-AG-Xl2" secondAttribute="leading" id="SXO-g6-PCW"/>
@@ -148,21 +152,24 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="627-ND-Zw3" customClass="OnboardingButton" customModule="HowAmIDoing" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                    <color key="backgroundColor" red="0.66309183835983276" green="0.99308902025222778" blue="1" alpha="0.28000000000000003" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="wFk-KY-TpU"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                     <state key="normal" title="Allow">
-                        <color key="titleColor" red="0.66309183835983276" green="0.99308902025222778" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="9"/>
+                            <real key="value" value="2"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                            <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="2"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                     <variation key="default">
@@ -177,7 +184,7 @@
                     </variation>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.1333333333" green="0.73333333329999995" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.95164865255355835" green="0.63161641359329224" blue="0.98722249269485474" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="627-ND-Zw3" secondAttribute="bottom" constant="12" id="3zt-iy-3G9"/>
                 <constraint firstItem="627-ND-Zw3" firstAttribute="top" secondItem="79n-AG-Xl2" secondAttribute="bottom" constant="8" id="GKs-pO-OwE"/>
